--- a/src/styles/AuthForms.css
+++ b/src/styles/AuthForms.css
@@ -153,7 +153,7 @@
 .signup-link:hover,
 .login-link:hover {
   text-decoration: underline;
-  color: #E85A4F;
+  color: #eb9d95; /* Lighter coral/salmon color */
 }
 
 .login-success {
@@ -218,12 +218,12 @@
 
 /* Secondary button style */
 .btn-secondary {
-  background-color: #8E8D8A;
+  background-color: #A9A8A6; /* Lighter gray */
   color: white;
 }
 
 .btn-secondary:hover {
-  background-color: #6D6C6A;
+  background-color: #8E8D8A; /* Medium gray on hover */
 }
 
 @media (max-width: 768px) {
